@@ -950,6 +950,8 @@ scid-4.3
 	    - Blunder-check annotation spots faster mates, regardless of threshold.
 	    - Annotation adds - in all modes - a '?!' nag if the main move is significantly (informant value)
 	      stronger than the best move the engine expected.
+	* PGN import always opened in Scids bin folder, now use last dir instead and store it.
+	* Mask files folder location gets stored and reused
 - New features:
 	* Correspondence Chess:
 		- Allow observation of games on ICCF webchess
@@ -1060,6 +1062,7 @@ scid-4.3
 	* Correction of possible overflow in material signature (ID: 2992119; thanks to Gregor Cramer)
 	* Optimisations for tree search (Thanks to G. Lohrscheidt)
    * Comment editor text frame scales properly
+	* Some directories did not get stored properly (epd, report)
 - Language updates:
 	* brazilian portugese translation (thanks ot Gilberto de Almeida Peres)
 	* nederland translation (thanks to Leander Laruelle)
